Updated proxy server with post route

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div id="comments"></div>
 
       <script src="http://localhost:5000/song_00001/bundle.js"></script>
-      <script src="http://localhost:5001/song_00001/bundle.js"></script>
-      <script src="http://localhost:5002/song_00001/bundle.js"></script>
+      <!-- <script src="http://localhost:5001/song_00001/bundle.js"></script>
+      <script src="http://localhost:5002/song_00001/bundle.js"></script> -->
     </body>
   </html>
 </html>
